@@ -13,9 +13,10 @@ V1.67
 ! Changed double click on pattern to open that pattern in patternview for edit (pooplog)
 ! Fixed noteoff recording to work correctly, moved toggle to seq menu with other commonly accessed toggles (pooplog)
 * Fixed minusminus button to decrease to 0 (pooplog)
-! UNDO/REDO for pattern and sequence editing!!! (pooplog)
++ UNDO/REDO for pattern and sequence editing!!! (pooplog)
 ! slight reordering of interface due to user request for more intuitive use (pooplog)
-! Native Plugin realtime mouse tweak recording!!! (pooplog)
++ Native Plugin realtime mouse tweak recording!!! (pooplog)
++ value dialog in machines shows offset hex values so they can be used easily with rest of program (pooplog)
 
 V1.66
 -----
